syntax = "proto3";

package document_processor;

option go_package = "github.com/firwoodlin/letstrans/service/document_processor";


service DocumentProcessor {
  rpc ProcessDocument (ProcessDocumentRequest) returns (ProcessDocumentResponse);
  rpc ModifyDocument (ModifyDocumentRequest) returns (ModifyDocumentResponse);
}

message ProcessDocumentRequest {
  string input_path = 1;
  string output_path = 2;
  string file_type = 3;
}

message ProcessDocumentResponse {
  string segments = 1;
}

message ModifyDocumentRequest {
  string input_path = 1;
  string output_path = 2;
  string replacements = 3;
  string file_type = 4;
}

message ModifyDocumentResponse {
  bool success = 1;
}

// https://grpc.io/docs/protoc-installation/
// protoc --go_out=. --go_opt=paths=source_relative   --go-grpc_out=. --go-grpc_opt=paths=source_relative document_processor.proto